infra/k8s/microservice1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
        - name: microservice1
          image: sssrockgupta/microservice1
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: microservice1-serv
spec:
  selector:
    app: microservice1
  ports:
    - name: microservice1
      protocol: TCP
      port: 3001
      targetPort: 3001
