infra/k8s/microservice2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
        - name: microservice2
          image: sssrockgupta/microservice2
---
apiVersion: v1
kind: Service
metadata:
  name: microservice2-serv
spec:
  selector:
    app: microservice2
  ports:
    - name: microservice2
      protocol: TCP
      port: 3002
      targetPort: 3002
